{
    "name": "Player",
    "maps": [
        {
            "name": "Deplacement",
            "id": "beb3d9b0-0176-4e8e-9ef1-fbc600d16ab5",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "84eaff0d-5b99-4bd8-996b-17537409ab14",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "16380318-501c-4b46-b995-983125365814",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2f7b2ad6-bbd8-4726-8009-608f6efb8cb8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e111145f-6a8a-43dc-89f9-b74677b66aca",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "520112bf-3de8-4d7a-af17-262905393f64",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ee79b637-dbba-463a-9205-a13769222c20",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Menuing",
            "id": "a228f95a-d447-47fe-94e4-212c154aba77",
            "actions": [
                {
                    "name": "Map",
                    "type": "Button",
                    "id": "ec651a2f-d60b-4c48-a48b-44c71242477c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PassiveItem",
                    "type": "Button",
                    "id": "2700a245-561e-40de-b01d-16dda953ebcd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef54ba3c-1810-466c-868d-be3008d3f32a",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c76aea9e-806c-4658-9a1b-e258d29b6f14",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PassiveItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Action",
            "id": "9fb63638-d9ba-4f2c-a8c9-000b17d48fb7",
            "actions": [
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "7fdf0b2d-2133-43af-91a1-90952b593f66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "2f68a785-838c-4bae-98c6-adcb0fd52098",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RecupItem",
                    "type": "Button",
                    "id": "f9d30448-146c-4469-8b52-16eb412494ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "04e3eee4-c386-492c-b177-223d7b478d62",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8234ca88-2595-4e98-9ec6-a553f62e5217",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02aa0edb-ad74-46f1-bf9d-8bda59c951c8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RecupItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "b3fa55dc-9558-47aa-8cad-a85445062f85",
            "actions": [
                {
                    "name": "UpdateHeartHUD",
                    "type": "Button",
                    "id": "f758d242-a404-4ac7-a3be-9f150ae7e989",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TakeDamage",
                    "type": "Button",
                    "id": "80936a37-220c-4c6f-88f7-b8dd19c16c2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Heal",
                    "type": "Button",
                    "id": "c9ed2a17-f938-4bc8-89b2-750eae718a63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveHeart",
                    "type": "Button",
                    "id": "e309addd-7eb5-4d5f-a780-bbe3028de7ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddHeart",
                    "type": "Button",
                    "id": "012190fd-33f1-4951-95c3-144fd9271940",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "25f813ef-f092-485e-9a7e-552dd3c38b8c",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeDamage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32ba3591-fb2c-4f30-9f50-79837a1eb86a",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41195242-03af-44f5-88aa-081e82bf4226",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddHeart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f2416c6-dc21-4aee-b2a1-9e542fba13e0",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpdateHeartHUD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1431132-f116-41df-8c87-86d7008ea3fb",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveHeart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}